Grok changes
************

1.0b1 (unreleased)
==================

* Removed `docutils` and `Pygment` from versions.cfg. Both are pinned
  in grokdocs subpackage. Closes
  https://bugs.launchpad.net/grok/+bug/340170

* Corrected Content-type; JSON views now report 'application/json'.

* updated zope.publisher dependency to 3.4.8 (fix paster.httpserver
  related bugs in XMLRPC, PUT)


1.0a4 (2009-05-21)
==================

* Pin grokcore.view to 1.7.

* Import zope.app.container interfaces from their actual definition not from a
  re-import.

* JSON views now report a Content-type: text/json. See
  https://bugs.launchpad.net/bugs/362902


1.0a3 (2009-04-10)
==================

* Pin grokui.admin to 0.3.2

* Pin grokcore.view to 1.5.

* Pin grokcore.component to 1.6.


1.0a2 (2009-04-08)
==================

* Documentation and doc string updates.

* Pin grokui.admin to 0.3.

* Pin grokcore.view to 1.4.

* Synced versions.cfg with the latest KGS release available at:
  http://download.zope.org/zope3.4/3.4.0/versions.cfg

* Expose ``IBeforeTraverseEvent`` for import in the ``grok`` namespace.

1.0a1 (2009-01-08)
==================

Feature changes
---------------

* Introduced ``grok.interfaces.IGrokSecurityView``, a marker interface
  which non-Grok views can use to state that they want to be handled
  like regular Grok views by the Grok publisher.

* Expose the ``DirectoryResource`` component from grokcore.view and the
  accompanying ``path`` directive.

* Similar to the layers and skins restructuring, the ``grok.RESTProtocol``
  baseclass has been removed in favour of a ``grok.restskin(name)`` directive
  that can be used on REST layer interfaces. Introduced the IRESTLayer base
  interfaces for defining REST layers.

* Besides our extensive existing documentation, we have also started
  to add a lot of docstrings to the Grok source code so it becomes
  easier to understand.

Bug fixes
---------

* Have GrokForm define an empty actions attribute by default, in order