@@ -5,9 +5,9 @@ parts =
     docs
     interpreter
     grokwiki
-    zopectl
-    data
-    test
+    data log etc test
+    zpasswd
+    zope_conf site_zcml zdaemon_conf deploy_ini debug_ini
     bundlemaker
 develop =
     .
@@ -16,8 +16,6 @@ develop =
 versions = versions
 extensions = buildout.dumppickedversions
 
-[versions]
-
 [docs]
 recipe = zc.recipe.egg
 eggs = grokdocs
@@ -25,55 +23,62 @@ eggs = grokdocs
 [interpreter]
 recipe = zc.recipe.egg
 eggs = grokwiki
-interpreter = python
+interpreter = grokpy
 
 [grokwiki]
-recipe = zc.zope3recipes>=0.5.3:application
+recipe = zc.recipe.egg
 eggs = grokwiki
-site.zcml = <include package="grokwiki" />
-            <include package="zope.app.twisted" />
-
-            <unauthenticatedPrincipal id="zope.anybody"
-                                      title="Unauthenticated User" />
-            <unauthenticatedGroup id="zope.Anybody"
-                                  title="Unauthenticated Users" />
-            <authenticatedGroup id="zope.Authenticated"
-                                title="Authenticated Users" />
-            <everybodyGroup id="zope.Everybody"
-                            title="All Users" />
-            <principal id="zope.manager"
-                       title="Manager"
-                       login="grok"
-                       password_manager="Plain Text"
-                       password="grok"
-                       />
-
-            <!-- Replace the following directive if you do not want
-                 public access -->
-            <grant permission="zope.View"
-                   principal="zope.Anybody" />
-            <grant permission="zope.app.dublincore.view"
-                   principal="zope.Anybody" />
-
-            <role id="zope.Manager" title="Site Manager" />
-            <role id="zope.Member" title="Site Member" />
-            <grantAll role="zope.Manager" />
-            <grant role="zope.Manager"
-                   principal="zope.manager" />
+       z3c.evalexception>=2.0
+       Paste
+       PasteScript
+       PasteDeploy
 
 [data]
 recipe = zc.recipe.filestorage
 
-# this section named so that the start/stop script is called bin/zopectl
-[zopectl]
-recipe = zc.zope3recipes:instance
-application = grokwiki
-zope.conf = ${data:zconfig}
+[log]
+recipe = zc.recipe.filestorage
+
+[etc]
+recipe = zc.recipe.filestorage
 
 [test]
 recipe = zc.recipe.testrunner
 eggs = grok
 defaults = ['--tests-pattern', '^f?tests$', '-v']
+
+# This section is named so that the zpasswd utility is
+# called `zpasswd`
+[zpasswd]
+recipe = z3c.recipe.dev:script
+eggs = grokwiki
+module = zope.app.server.zpasswd
+method = main
+
+[zope_conf]
+recipe = z3c.recipe.template
+input = etc/zope.conf.in
+output = ${buildout:parts-directory}/etc/zope.conf
+
+[site_zcml]
+recipe = z3c.recipe.template
+input = etc/site.zcml.in
+output = ${buildout:parts-directory}/etc/site.zcml
+
+[zdaemon_conf]
+recipe = z3c.recipe.template
+input = etc/zdaemon.conf.in
+output = ${buildout:parts-directory}/etc/zdaemon.conf
+
+[deploy_ini]
+recipe = z3c.recipe.template
+input = etc/deploy.ini.in
+output = ${buildout:parts-directory}/etc/deploy.ini
+
+[debug_ini]
+recipe = z3c.recipe.template
+input = etc/debug.ini.in
+output = ${buildout:parts-directory}/etc/debug.ini
 
 [bundlemaker]
 recipe = z3c.recipe.eggbasket:creator
