@@ -13,6 +13,9 @@ Grok changes
 * updated zope.publisher dependency to 3.4.8 (fix paster.httpserver
   related bugs in XMLRPC, PUT)
 
+* switched buildout to paster base template (like grokproject default)
+  https://bugs.launchpad.net/grok/+bug/307197
+
 
 1.0a4 (2009-05-21)
 ==================
